--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
 version: '2'
 services:
   revealmd:
-    image: revealmd:latest
+    image: tkaefer/reveal-md-container:latest
     volumes_from:
-      - impostor
-  impostor:
-    image: impostor:latest
+      - presentation
+  presentation:
+    image: some-container-volume-image-providing-the-presentation
     volumes:
       - /app
